fix z-index for aside and nav mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,6 +167,7 @@ h2::after{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    z-index: 10;
 }
 a.link-brand{
     display: block;
